# libcapsicum

./: .gitignore  Makefile.am  autogen.sh  configure.ac
include/: libcapsicum.h
include/capsicum/: capsicum.h
src/: Makefile.am  libcapsicum_fdlist.c  libcapsicum_host.c  libcapsicum_host_io.c  libcapsicum_sandbox.c  libcapsicum_sandbox_io.c
test/: Makefile.am  fdlist.c  main.c
